<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

   <TextView
       android:id="@+id/tvTitle"
       style="@style/dialogTextBlack"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       android:text="@string/dialog_con_error"
       android:textSize="16sp" />

   <ImageView
       android:id="@+id/imgView"
       android:layout_width="32dp"
       android:layout_height="32dp"
       android:layout_below="@id/tvTitle"
       android:layout_alignParentStart="true"
       android:layout_marginTop="10dp"
       android:contentDescription="@string/app_name"
       android:src="@drawable/icon_no_internet" />

   <TextView
       android:id="@+id/tvDescription"
       style="@style/dialogTextGrey"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/tvTitle"
       android:layout_marginStart="12dp"
       android:layout_marginTop="12dp"
       android:layout_toEndOf="@id/imgView"
       android:text="@string/connection_warning" />

   <Button
       android:id="@+id/mat_btn_cancel"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/tvDescription"
       android:layout_alignEnd="@id/tvDescription"
       android:layout_centerHorizontal="true"
       android:background="@android:color/transparent"
       android:text="@string/dialog_cancel"
       android:textAllCaps="false"
       android:textColor="@color/appThemeColor"
       android:textSize="14sp"
       android:textStyle="bold" />

   <Button
       android:id="@+id/mat_button_okay"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/tvDescription"
       android:layout_toStartOf="@id/mat_btn_cancel"
       android:background="@android:color/transparent"
       android:gravity="center_vertical|end"
       android:text="@string/turn_on"
       android:textAllCaps="false"
       android:textColor="@color/appThemeColor"
       android:textSize="14sp"
       android:textStyle="bold" />

</RelativeLayout>