<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLightGrey"
    tools:context=".UIViews.PartnerVehicleInfo">

   <!-- top app bar !-->
   <RelativeLayout
       android:id="@+id/relativeLayout"
       android:layout_width="0dp"
       android:layout_height="?actionBarSize"
       android:background="@drawable/border_bottom_dark"
       android:padding="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <ImageView
          android:id="@+id/img_back"
          android:layout_width="32dp"
          android:layout_height="32dp"
          android:layout_alignParentStart="true"
          android:layout_centerVertical="true"
          android:contentDescription="@string/app_name"
          android:src="@drawable/arrow_back" />

      <TextView
          style="@style/TextSmallBlack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/pt_vehicle_info" />

      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:indeterminate="true"
          android:indeterminateTint="@color/appThemeColor"
          android:visibility="gone"
          tools:visibility="visible"/>

   </RelativeLayout>
   <!-- top app bar !-->

   <TableLayout
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:stretchColumns="0"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="14dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="14dp"
          android:layout_marginBottom="8dp">

         <TextView
             style="@style/TextSmallBlack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/v_type" />

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/four_ex_border">

         <TextView
             android:id="@+id/tv_vehicle_type"
             style="@style/LightTextBlack_Large"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginStart="14dp"
             android:gravity="center_vertical"
             tools:text="Bicycle/Scooter/Car" />

      </TableRow>

      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="14dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="14dp"
          android:layout_marginBottom="8dp">

         <TextView
             style="@style/TextSmallBlack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/pt_reg_no" />

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/four_ex_border">

         <TextView
             android:id="@+id/tv_vehicle_num"
             style="@style/LightTextBlack_Large"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginStart="14dp"
             android:gravity="center_vertical"
             tools:text="PK67 2234" />

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <TextView
             style="@style/LightTextGrey_Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="14dp"
             android:text="@string/veh_supp_msg" />

      </TableRow>

   </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>