<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appThemeColor"
    tools:context=".UIViews.PartnerLogin">

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:contentDescription="@string/todo"
       android:padding="6dp"
       android:scaleType="fitCenter"
       app:layout_constraintBottom_toTopOf="@+id/partner_login_cardView"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/rider_img" />

   <androidx.cardview.widget.CardView
       android:id="@+id/partner_login_cardView"
       android:layout_width="0dp"
       android:layout_height="220dp"
       android:elevation="4dp"
       app:cardCornerRadius="2dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       tools:targetApi="lollipop">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:padding="12dp">

         <TextView
             android:id="@+id/login_msg"
             style="@style/TextSmallBlack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:padding="1dp"
             android:text="@string/login_head" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/partner_email_or_phone"
             style="@style/TIL_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/login_msg"
             android:layout_alignParentStart="true"
             android:layout_marginTop="4dp"
             android:hint="@string/enter_phone_number_or_email"
             app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextEsmallBlack"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:padding="8dp">

            </com.google.android.material.textfield.TextInputEditText>

         </com.google.android.material.textfield.TextInputLayout>

         <!-- RelLay Button with Loading -->
         <RelativeLayout
             android:id="@+id/rel_lay_btn_load"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/partner_email_or_phone"
             android:layout_marginTop="4dp">

            <Button
                android:id="@+id/btn_continue_partner_login"
                style="@style/TextSmallBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_rect"
                android:text="@string/btn_confirm"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progress_bar_btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="2dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/appThemeColor"
                android:visibility="gone"
                tools:visibility="visible" />

         </RelativeLayout>
         <!-- RelLay Button with Loading -->

         <Button
             android:id="@+id/btn_goto_registration"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rel_lay_btn_load"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/helvetica_neue_medium"
             android:text="@string/not_a_partner"
             android:textColor="#12D2B3"
             android:textSize="14sp" />

      </RelativeLayout>

   </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>